Applied new theme