@@ -5,17 +5,17 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.0'
 }
 
-mainClassName = "main.java.core.JavaApp"
-
+mainClassName = "baro.core.JavaApp"
 
 javafx {
-    version = "12"
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
 version '1.0'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
+
+compileJava.options.encoding = 'UTF-8'
 
 repositories {
     jcenter()
@@ -36,26 +36,4 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
-}
-
-compileJava {
-    options.encoding = "UTF-8"
-    options.incremental = true
-
-    options.compilerArgs.addAll([
-            "--add-exports",
-            "javafx.base/com.sun.javafx.event=ALL-UNNAMED"
-    ])
-    options.compilerArgs.addAll([
-            "--add-exports",
-            "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
-    ])
-    options.compilerArgs.addAll([
-            "--add-exports",
-            "javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED"
-    ])
-    options.compilerArgs.addAll([
-            "--add-exports",
-            "javafx.graphics/com.sun.javafx.util=ALL-UNNAMED"
-    ])
 }
